--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
-        "guzzlehttp/guzzle": "~6.0",
+        "php": "^8.0",
+        "guzzlehttp/guzzle": "^7.4",
         "monolog/monolog": "^1.23"
     },
     "require-dev": {
-      "phpunit/phpunit": "^7"
+      "phpunit/phpunit": "^9"
     },
     "autoload": {
         "psr-4": {
